# helicopter-game

./: CMakeLists.txt  Mesh.cpp  Mesh.h  README.md  float3.h  main.cpp
src/: Camera.cpp  Camera.h  main.cpp
src/Lighting/: DirectionalLight.cpp  DirectionalLight.h  LightSource.cpp  LightSource.h  PointLight.cpp  PointLight.h
src/Materials/: Material.cpp  Material.h  TexturedMaterial.cpp  TexturedMaterial.h
src/Objects/: Billboard.cpp  Billboard.h  Mesh.cpp  Mesh.h  MeshInstance.cpp  MeshInstance.h  Object.cpp  Object.h  ObjectCollection.cpp  ObjectCollection.h
src/Objects/General/: MeshInstance.h  Object.cpp  Object.h  ObjectCollection.h
src/Objects/Literals/: Bullet.cpp  Bullet.h  Ground.cpp  Ground.h  Helicopter.cpp  Helicopter.h  Teapot.cpp  Teapot.h  UFO.cpp  UFO.h
src/Objects/Properties/: Collidable.cpp  Collidable.h  EffectManager.cpp  EffectManager.h  HeliCam.cpp  HeliCam.h  LifeSpan.cpp  LifeSpan.h  Mover.cpp  Mover.h  Seeker.cpp  Seeker.h
src/Utility/: DelayedEffect.cpp  DelayedEffect.h
